Finally making the h1 stop wrapping!

--- a/css/yotfh.css
+++ b/css/yotfh.css
@@ -24,7 +24,7 @@ ul.menu {
 }
 @media screen and (max-width: 768px) {
     h1{
-        font-size: 32px;
+        font-size: 30px;
     }
     h2 {
         font-size: 24px;
